--- a/.env
+++ b/.env
@@ -50,3 +50,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+APP_URL=http://localhost:8000
+MIX_ASSET_URL=http://localhost:8000
